--- a/demo/InvokeAzureFunction/InvokeAzureFunction.csproj
+++ b/demo/InvokeAzureFunction/InvokeAzureFunction.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.15.0" />
+  </ItemGroup>
+
 </Project>
