--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
   "cSpell.ignoreWords": [
     "pkce",
     "raph"
+  ],
+  "azureFunctions.deploySubpath": "GraphSampleFunctions/bin/Release/net6.0/publish",
+  "azureFunctions.projectLanguage": "C#",
+  "azureFunctions.projectRuntime": "~4",
+  "debug.internalConsoleOptions": "neverOpen",
+  "azureFunctions.preDeployTask": "publish (functions)",
+  "cSpell.words": [
+    "MSAL"
   ]
 }
