--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "nuget" # See documentation for possible values
-    directory: "/GraphSampleFunctions" # Location of package manifests
+  - package-ecosystem: nuget # See documentation for possible values
+    directory: /GraphSampleFunctions # Location of package manifests
     schedule:
-      interval: "weekly"
+      interval: weekly
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: weekly
